# mlops

./: .gitignore  noxfile.py  pyproject.toml
.github/workflows/: ci-cd-pullrequest.yml  ci.yml
config/dagster/: dagster.yaml  workspace.yaml
config/feast/: feature_store.yaml
config/kind/: config.yml
config/scality/: config.json
images/: base.Dockerfile  github-runner.Dockerfile
images/entrypoints/: dagit-entrypoint.sh  dagster-code-entrypoint.sh  dagster-daemon-entrypoint.sh  feast-entrypoint.sh  github-runner-entrypoint.sh  mlflow-entrypoint.sh  ray-entrypoint.sh
images/scripts/: github-runner-entrypoint.sh
manifests/: service-account.yml
scripts/: test.sh
src/core/: pyproject.toml
src/core/mlops/core/: __main__.py
src/core/mlops/core/utils/: __main__.py
src/etl/: pyproject.toml
src/etl/mlops/etl/: __init__.py  database.py
src/etl/mlops/etl/energy_data/: assets.py  features.py  resources.py
stacks/: base.docker-compose.yml  docker-compose.override.yml  docker-compose.yml  github-runner.docker-compose.yml
test/: test_placeholder.py
tests/: test_placeholder.py
