[tool.poetry]
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]
description = ""
name = "mlops"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.pytest.ini_options]
markers = [
  "unit: marks a test as a unit test",
  "integration: marks a test as an integration test",
  "e2e: marks a test as an end-to-end test",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
