[tool.poetry]
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]
description = ""
name = "mlops"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
httpx = "^0.24.0"
mlops-core = { path = "src/core", develop = true }
mlops-etl = { path = "src/etl", develop = true }
python = "^3.8"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
nox = "^2023.4.22"

[tool.poetry.group.mlflow.dependencies]
mlflow = "^2.3.1"
psycopg2-binary = "^2.9.6"
sqlalchemy-utils = "^0.41.1"

[tool.poetry.group.ray.dependencies]
ray = { extras = ["serve"], version = "^2.4.0" }

[tool.poetry.group.dagster.dependencies]
dagit = "^1.3.1"
dagster = "^1.3.1"
dagster-aws = "^0.19.1"
dagster-docker = "^0.19.1"
dagster-postgres = "^0.19.1"

[tool.poetry.group.feast.dependencies]
feast = "^0.31.1"

[tool.pytest.ini_options]
markers = [
  "unit: marks a test as a unit test",
  "integration: marks a test as an integration test",
  "e2e: marks a test as an end-to-end test",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
